<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora"
    tools:layout_editor_absoluteY="73dp">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal|fill"
        android:onClick="limparTela"
        android:text="@string/titulo"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtQTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtQTD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtEntradaDados"
        app:layout_constraintEnd_toStartOf="@+id/txtEntradaDados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEntradaDados" />

    <EditText
        android:id="@+id/txtEntradaDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:numeric="decimal"
        app:layout_constraintEnd_toEndOf="@+id/txtTitulo"
        app:layout_constraintStart_toStartOf="@+id/txtTitulo"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <Spinner
        android:id="@+id/spinnerDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/txtEntradaDados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtEntradaDados"
        app:layout_constraintTop_toTopOf="@+id/txtEntradaDados" />

    <TextView
        android:id="@+id/txtVelocidade"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txtVelo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtEntradaVelocidade"
        app:layout_constraintEnd_toStartOf="@+id/txtEntradaVelocidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEntradaVelocidade" />

    <EditText
        android:id="@+id/txtEntradaVelocidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:numeric="decimal"
        app:layout_constraintEnd_toEndOf="@+id/txtEntradaDados"
        app:layout_constraintStart_toStartOf="@+id/txtEntradaDados"
        app:layout_constraintTop_toBottomOf="@+id/txtEntradaDados" />

    <Spinner
        android:id="@+id/spinnerVelocidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/txtEntradaVelocidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtEntradaVelocidade"
        app:layout_constraintTop_toTopOf="@+id/txtEntradaVelocidade" />

    <Button
        android:id="@+id/btnCalcular"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:onClick="preparacaoInicial"
        android:text="@string/button2"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEntradaVelocidade" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textIsSelectable="true"
        android:gravity="left"
        android:text="@string/txtInfoCal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

</android.support.constraint.ConstraintLayout>